--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,17 +1,11 @@
-# Use an official Python runtime as a parent image
-FROM python:latest
+FROM python:3.8-slim
 
-# Set the working directory to /app
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
 COPY . /app
 
-# Install any dependencies your Python application needs
-RUN pip install pymongo requests
+RUN pip install --no-cache-dir pymongo requests
 
-# Expose the port your application runs on
 EXPOSE 8000
 
-# Command to run your application
 CMD ["python", "http_server.py"]
