--- a/server/dockerfile
+++ b/server/dockerfile
@@ -4,8 +4,8 @@ WORKDIR /app
 
 COPY . /app
 
-RUN pip install --no-cache-dir pymongo requests
+RUN pip install --no-cache-dir boto3
 
 EXPOSE 8000
 
-CMD ["python", "http_server.py"]
+CMD ["python", "http_server_dynamo.py"]
