--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Local .terraform directories
 **/.terraform/*
 
+benchmark/users.txt
+benchmark/dict.txt
 # Added github dependencies
 benchmark/Stress-tester/
 
